@@ -9,7 +9,9 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 2017-04-20 niel
+	Add: Created Predb model for use in IRCScraper. No other code is updated for it yet.
 	Fix: Add 'predb' to uninflected list in connections.
+	Add: Created Groups model for use in IRCScraper. No other code is updated for it yet.
 2017-04-19 niel
 	Fix: Make IRCClient an abstract class, as it has an abstract method which was not previously
 		marked as such.
